Added onassis theme

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h3>WELCOME TO <bold>Peter Campbell</bold> WEB DESIGN. I AM A<bold>PERTH, WA BASED</bold> SOFTWARE DEVELOPER. CRAFTED WITH LOVE BY <bold>BLACKTIE.CO</bold>. <br/>
-					<bold>IDEAL FOR</bold> AGENCIES & FREELANCERS.
+                    <h3>I am a freelance <bold>software developer</bold> based in <bold>Perth, WA</bold>. I have <bold>8 years</bold>. <br/>
+					of commercial experience developer software and building web sites.
 				</h3>
                 </div>
             </div>
