--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h3>I am a freelance <bold>software developer</bold> based in <bold>Perth, WA</bold>. I have <bold>8 years</bold>. <br/>
-					of commercial experience developer software and building web sites.
+                    <h3>I am a freelance <bold>software developer</bold> based in <bold>Perth, WA</bold>. I have <bold>8 years</bold> of commercial experience developer software and building web sites.
 				</h3>
                 </div>
             </div>
@@ -99,19 +98,19 @@
                 <br>
                 <br>
                 <div class="col-lg-8 desc">
-                    <h4>About This Project</h4>
-                    <p>Various versions have evolved over the years. Many desktop publishing packages and web page editors now use Lorem Ipsum. A search for 'lorem ipsum' will uncover many web sites still in their infancy. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                    <h4>About Me</h4>
+                    <p>Since 2008 I have been working as a developer across many industries including; legal services, manufacuring, financial services, and real estate. </p>
                 </div>
                 <div class="col-lg-4 desc desc-b">
-                    <h4>Project Data</h4>
+                    <h4></h4>
                     <p>
-                        <i class="icon-user"></i> Frank Lampard
+                        <i class="icon-user"></i> Peter Campbell
                         <br/>
-                        <i class="icon-tag"></i> Web Design
+                        <i class="icon-tag"></i> Software Developer
                         <br/>
-                        <i class="icon-time"></i> 2013
+                        <i class="icon-time"></i> 32
                         <br/>
-                        <i class="icon-globe"></i> www.blacktie.co
+                        <i class="icon-globe"></i> tattooedpierre.github.io
                         <br/>
                     </p>
                 </div>
