--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Menu -->
     <nav class="menu" id="theMenu">
         <div class="menu-wrap">
-            <h1 class="logo"><a href="index.html#home">Onassis</a></h1>
+            <h1 class="logo"><a href="index.html#home">Menu</a></h1>
             <i class="icon-remove menu-close"></i>
             <a href="#home" class="smoothScroll">Home</a>
             <a href="#services" class="smoothScroll">Services</a>
@@ -62,7 +62,7 @@
         <div class="container">
             <br>
             <h1>Peter Campbell</h1>
-            <h2>Web Design</h2>
+            <h2>Software Developer</h2>
             <div class="row">
                 <br>
                 <br>
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h3>I am a freelance <bold>software developer</bold> based in <bold>Perth, WA</bold>. I have <bold>8 years</bold> of commercial experience developer software and building web sites.
+                    <h3>I am a freelance <bold>software developer</bold> based in <bold>Perth, WA</bold> with <bold>8 years</bold> of commercial experience across multiple industries.
 				</h3>
                 </div>
             </div>
@@ -99,7 +99,8 @@
                 <br>
                 <div class="col-lg-8 desc">
                     <h4>About Me</h4>
-                    <p>Since 2008 I have been working as a developer across many industries including; legal services, manufacuring, financial services, and real estate. </p>
+                    <p>Since 2008 I have been working as a developer across many industries including; legal services, manufacturing, financial services and real estate. </p>
+                    <p>I have extensive experience using ASP.NET MVC, C#, JavaScript, CSS, extJS, jQuery, Bootstrap and other related web tech.</p>
                 </div>
                 <div class="col-lg-4 desc desc-b">
                     <h4></h4>
@@ -121,97 +122,48 @@
     <!-- /g -->
 
     <!-- ========== CAROUSEL / DESCRIPTION - DARK GREY SECTION ========== -->
-    <div id="dg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img src="assets/img/item-01.png" alt="">
-                            </div>
-                            <div class="item">
-                                <img src="assets/img/item-02.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <!-- /container -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-4 desc desc-a">
+                <h4><i class="icon-bullseye"></i> THE GOAL</h4>
+                <p>Whether you are looking to create a new website or upgrade an old one, design a mobile app or if you need bspoke bespoke software for you PC - I can help.</p>
             </div>
-            <br>
-            <br>
-            <br>
-        </div>
-        <!-- /container -->
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-4 desc desc-a">
-                    <h4><i class="icon-bullseye"></i> THE GOAL</h4>
-                    <p>Etiam dictum gravida nibh at accum san. Quisque aliquam risus bibendum diam elementum, et tempus enim suscipit. Duis sit amet euismod.</p>
-                    <br>
-                    <br>
-                    <h4><i class="icon-desktop"></i> THE RESULT</h4>
-                    <p>Etiam dictum gravida nibh at accum san. Quisque aliquam risus bibendum diam elementum, et tempus enim suscipit. Duis sit amet euismod.</p>
-                </div>
-
-                <div class="col-lg-4 desc">
-                    <h4><i class="icon-bolt"></i> THE IDEA</h4>
-                    <p>Etiam dictum gravida nibh at accum san. Quisque aliquam risus bibendum diam elementum, et tempus enim suscipit. Duis sit amet euismod.</p>
-                    <br>
-                    <br>
-                    <h4><i class="icon-bar-chart"></i> THE STATICS</h4>
-                    <p>Etiam dictum gravida nibh at accum san. Quisque aliquam risus bibendum diam elementum, et tempus enim suscipit. Duis sit amet euismod.</p>
-                </div>
-                <div class="col-lg-2"></div>
-
+            <div class="col-lg-4 desc">
+                <h4><i class="icon-desktop"></i> THE RESULT</h4>
+                <p>
+                    <a href="http://www.reiwatraining.com.au" target="_blank"> <i class="icon-link"></i>&nbsp;REIWA Training</a>
+                    <br/>
+                    <a href="http://www.saveandinvest.com/what-we-provide/wealthpro/" target="_blank"> <i class="icon-link"></i>&nbsp;WealthPro</a>
+                </p>
             </div>
-            <div class="row">
-                <br>
-                <br>
-                <div class="col-lg-4 col-lg-offset-4">
-                    <a href="index.html#portfolio" style="font-size:20px;">
-                        < <i class="icon-th-large"></i> > </a>
-                </div>
-            </div>
+            <div class="col-lg-2"></div>
         </div>
     </div>
+    </div>
     <!-- /dg -->
-
-
-
 
     <!-- ========== FOOTER SECTION ========== -->
     <div id="f">
         <div class="container">
             <div class="row">
-                <h3><b>CONTACT US</b></h3>
+                <h3><b>CONTACT ME</b></h3>
                 <br>
                 <div class="col-lg-4">
-                    <h3><b>Send Us A Message:</b></h3>
-                    <h3>onassis@blacktie.co</h3>
+                    <h3><b>Send Me A Message:</b></h3>
+                    <h3>pcampbellsoft<i class="icon-at"></i>@mac.com</h3>
                     <br>
                 </div>
 
                 <div class="col-lg-4">
-                    <h3><b>Call Us:</b></h3>
-                    <h3>+55 3984-4389</h3>
-                    <br>
-                </div>
-
-                <div class="col-lg-4">
-                    <h3><b>We Are Social</b></h3>
+                    <h3><b>Other Sites</b></h3>
                     <p>
-                        <a href="index.html#"><i class="icon-facebook"></i></a>
-                        <a href="index.html#"><i class="icon-twitter"></i></a>
-                        <a href="index.html#"><i class="icon-envelope"></i></a>
+                        <a href="index.html#"><i class="icon-linkedin"></i></a>
+                        <a href="index.html#"><i class="icon-instagram"></i></a>
                     </p>
                     <br>
                 </div>
@@ -224,7 +176,7 @@
 
     <div id="c">
         <div class="container">
-            <p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+            <p>Created by Peter Campbell</p>
 
         </div>
     </div>
